--- a/join.html
+++ b/join.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <meta name="description" content="Join Success Class - Real-time multilingual video classroom"/>
+  <meta name="description" content="Join Succes Class - Real-time multilingual video classroom"/>
   <meta name="theme-color" content="#3498db"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-  <meta name="apple-mobile-web-app-title" content="Success Class"/>
-  <title>Join Success Class</title>
+  <meta name="apple-mobile-web-app-title" content="Succes Class"/>
+  <title>Join Succes Class</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -79,7 +79,7 @@
     <div class="join-header">
       <div class="join-logo">
         <div class="logo-icon"><i class="fas fa-graduation-cap"></i></div>
-        <h1>Success Class</h1>
+        <h1>Succes Class</h1>
       </div>
       <p class="join-subtitle">Join a real-time multilingual classroom</p>
     </div>
