--- a/join.html
+++ b/join.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <meta name="description" content="Join Succes Class - Real-time multilingual video classroom"/>
+  <meta name="description" content="Join Success Class - Real-time multilingual video classroom"/>
   <meta name="theme-color" content="#3498db"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-  <meta name="apple-mobile-web-app-title" content="Succes Class"/>
-  <title>Join Succes Class</title>
+  <meta name="apple-mobile-web-app-title" content="Success Class"/>
+  <title>Join Success Class</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -39,15 +39,20 @@
     .device-options{margin-top:24px}
     .device-options h3{font-size:16px;margin-bottom:16px;color:var(--text-muted);display:flex;align-items:center;gap:8px}
     .device-options h3 i{color:var(--accent)}
-    .device-grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    .device-grid{display:grid;grid-template-columns:repeat(2, minmax(0, 1fr));gap:12px;width:100%}
     @media(max-width:480px){.device-grid{grid-template-columns:1fr}}
-    .device-card{padding:16px;background:var(--surface2);border-radius:12px;border:1px solid transparent;transition:all .2s;cursor:pointer}
+    .device-card{
+      padding:16px;background:var(--surface2);border-radius:12px;
+      border:1px solid transparent;transition:all .2s;cursor:pointer;
+      overflow:hidden;display:flex;flex-direction:column;justify-content:center;
+      min-width:0; /* critical for ellipsis to work in grid/flex */
+    }
     .device-card:hover{border-color:var(--accent);background:var(--surface3)}
     .device-card.active{border-color:var(--accent);background:rgba(52,152,219,0.1)}
     .device-card-header{display:flex;align-items:center;gap:10px;margin-bottom:8px}
-    .device-card-header i{font-size:18px;color:var(--accent)}
-    .device-card-header h4{font-size:14px;font-weight:600}
-    .device-card p{font-size:12px;color:var(--text-muted);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+    .device-card-header i{font-size:18px;color:var(--accent);flex-shrink:0}
+    .device-card-header h4{font-size:14px;font-weight:600;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+    .device-card p{font-size:12px;color:var(--text-muted);white-space:nowrap;overflow:hidden;text-overflow:ellipsis;width:100%}
     .join-actions{margin-top:32px;display:flex;gap:12px}
     .btn-primary{flex:1;padding:18px;background:var(--green);color:#000;border-radius:14px;font-size:16px;font-weight:600;display:flex;align-items:center;justify-content:center;gap:10px;transition:background .2s}
     .btn-primary:hover{background:#a1cc4a}
@@ -79,7 +84,7 @@
     <div class="join-header">
       <div class="join-logo">
         <div class="logo-icon"><i class="fas fa-graduation-cap"></i></div>
-        <h1>Succes Class</h1>
+        <h1>Success Class</h1>
       </div>
       <p class="join-subtitle">Join a real-time multilingual classroom</p>
     </div>
